[package]
name = "hyperlane-ton"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
derive-new.workspace = true

tonlib = "0.17.6"
hyperlane-core = { path = "../../hyperlane-core", features = ["async"] }

