[package]
name = "hyperlane-ton"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
derive-new.workspace = true
hex.workspace = true

tonlib = "0.17.6"
hyperlane-core = { path = "../../hyperlane-core", features = ["async"] }
tokio = { workspace = true, version = "1.4", features = ["full"] }

reqwest = { workspace = true, version = "0.11", features = ["json"] }
